--- a/app/voice/style.css
+++ b/app/voice/style.css
@@ -1,31 +1,59 @@
+.body_wrapper {
+  width: 720px;
+  margin: 100px auto;
+  font-family: Verdana, Arial, sans-serif;
+}
 
-  * {
-    font-family: Verdana, Arial, sans-serif;
-  }
-  a:link {
-    color:#000;
-    text-decoration: none;
-  }
-  a:visited {
-    color:#000;
-  }
-  a:hover {
-    color:#33F;
-  }
-  .button {
-    background: -webkit-linear-gradient(top,#008dfd 0,#0370ea 100%);
-    border: 1px solid #076bd2;
-    border-radius: 3px;
-    color: #fff;
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
 
-    font-size: 13px;
-    font-weight: bold;
-    line-height: 1.3;
-    padding: 8px 25px;
-    text-align: center;
-    text-shadow: 1px 1px 1px #076bd2;
-    letter-spacing: normal;
-  }
+.mic_icon {
+  align-self: center;
+  padding-right: 50px;
+}
+
+.header .logo img{
+  width: 60%;
+}
+
+.header img.mic {
+  width: 100%;
+}
+
+.content {
+  display: flex;
+}
+
+.content .thumbnail img {
+  width: 400px;
+}
+
+.content button {
+  width: 180px;
+}
+
+.content #selections {
+  font-size: 18px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.content #selections button{
+  margin: 10px 0;
+}
+
+.btn-groups {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+
+
   .center {
     padding: 10px;
     text-align: center;
@@ -58,10 +86,11 @@
     font-weight: 300;
   }
   #info {
-    font-size: 20px;
-    text-align: center;
+    font-size: 18px;
     color: #777;
     visibility: hidden;
+    text-align: center;
+    margin: 20px 0;
   }
   #results {
     font-size: 14px;
@@ -76,3 +105,15 @@
     background-color:transparent;
     padding: 0;
   }
+
+
+a:link {
+  color:#000;
+  text-decoration: none;
+}
+a:visited {
+  color:#000;
+}
+a:hover {
+  color:#33F;
+}
