--- a/app/player/style.css
+++ b/app/player/style.css
@@ -8,5 +8,11 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
 video::-webkit-media-controls {
-        # display: none;
-      }
+         display: none;
+ }
+.div_hide{
+  display: none;
+ }
+#fullscreen_btn {
+
+  }
