--- a/app/study/style.css
+++ b/app/study/style.css
@@ -16,7 +16,15 @@
 }
 
 .header .logo img{
-  width: 60%;
+  width: 100px;
+  height: 70px;
+}
+
+.logo_text{
+  font-size: 20pt;
+  color: #007FFF;
+  font-weight: 400;
+  display: inline;
 }
 
 .header img.mic {
