--- a/app/player/style.css
+++ b/app/player/style.css
@@ -16,3 +16,15 @@ video::-webkit-media-controls {
 #fullscreen_btn {
 
   }
+.overlay{
+  position: absolute; 
+  top: 40%; 
+  color: #FFF; 
+  text-align: center;
+  font-size: 40px;
+  background-color: rgba(221, 221, 221, 0.3);
+  width: 90%;
+  padding: 30px 0 20px 0;
+  z-index: 2147483647;
+
+}
